2005-11-02  George Liu <george.liu@ussj.ricoh.com>

	* PPD/ Added 44 new Ricoh Family and OEM Postscript PPD files.
        * printer/ Added 44 printer xml files for the new Postscript printer entries.
        * driver/Postscript.xml Added 44 printer entries

2005-10-31  George Liu <george.liu@ussj.ricoh.com>

	* PPD/ Fixed a duplex bug and updated 136 PXL PPD files for Ricoh,
	Lanier, Gestetner, Infotec, Savin and NRG. Also removed 300dpi
	support for those models.

	* PPD/, /printer,  Added 42 color PCL-XL PPD and xml files for Ricoh Family
	and OEMs. Added the 42 printer entries into pxlmono.xml and
	pxlcolor.xml.

2005-10-27  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Minolta-magicolor_2400W.xml, driver/m2300w.xml,
	  driver/m2400w.xml: Added Konica Minolta magicolor 2400W.

	* printer/Minolta-magicolor_2300W.xml: Text and IEEE-1284 ID
	  update.

2005-10-26  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, Makefile.in: Let installed custom PPDs get
	  gzipped by default. Let the PPDs also get linked into the
	  /usr/share/cups/model repository if the user does not turn 
	  this off.

2005-10-23  Till Kamppeter <till.kamppeter@gmx.net>

	* README, COPYING: Updated Copyright info.

	* printer/Epson-AcuLaser_C4100PS.xml,
	  printer/Epson-EPL-N2500PS.xml,
	  printer/HP-Business_Inkjet_2250.xml,
	  printer/HP-Business_Inkjet_2280.xml,
	  printer/HP-Business_Inkjet_2300.xml,
	  printer/HP-Business_Inkjet_2600.xml,
	  printer/HP-Business_Inkjet_2800.xml,
	  printer/HP-Business_Inkjet_3000.xml,
	  printer/HP-Color_LaserJet_2500.xml,
	  printer/HP-Color_LaserJet_2550.xml,
	  printer/HP-Color_LaserJet_2800.xml,
	  printer/HP-Color_LaserJet_3700.xml,
	  printer/HP-Color_LaserJet_4500.xml,
	  printer/HP-Color_LaserJet_4550.xml,
	  printer/HP-Color_LaserJet_4600.xml,
	  printer/HP-Color_LaserJet_4610.xml,
	  printer/HP-Color_LaserJet_4650.xml,
	  printer/HP-Color_LaserJet_4700.xml,
	  printer/HP-Color_LaserJet_4730_MFP.xml,