@@ -18,6 +18,12 @@
     </proprietary>
   </lang>
   <autodetect>
+    <usb>
+      <manufacturer>KONICA MINOLTA</manufacturer>
+      <model>PP1350W</model>
+      <description>KONICA MINOLTA PP1350W</description>
+      <commandset>NA</commandset>
+    </usb>
   </autodetect>
   <functionality>B</functionality>
   <driver>min12xxw</driver>
