@@ -1,3 +1,8 @@
+2005-11-09  Tim Waugh <twaugh@redhat.com>
+
+	* printer/Minolta-PagePro_1350W.xml: Added IEEE 1284 information (RH
+	  bug #172347).
+
 2005-11-02  George Liu <george.liu@ussj.ricoh.com>
 
 	* PPD/ Added 44 new Ricoh Family and OEM Postscript PPD files.
